// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeContainer change handle should call injected prop onChange with the correct params when a node is deleted 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 4,
              "name": "Leaf 4",
            },
          ],
          "id": 2,
          "name": "Leaf 2",
          "state": Object {
            "deletable": true,
            "expanded": true,
          },
        },
        Object {
          "id": 5,
          "name": "Leaf 5",
        },
      ],
      "id": 0,
      "name": "Leaf 1",
      "state": Object {
        "expanded": true,
      },
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 7,
              "name": "Leaf 8",
            },
            Object {
              "id": 8,
              "name": "Leaf 9",
            },
          ],
          "id": 6,
          "name": "Leaf 7",
          "state": Object {
            "expanded": false,
          },
        },
        Object {
          "id": 9,
          "name": "Leaf 10",
        },
      ],
      "id": 1,
      "name": "Leaf 6",
      "state": Object {
        "deletable": true,
        "expanded": false,
      },
    },
    Object {
      "id": "z",
      "name": "Leaf z",
      "state": Object {
        "deletable": true,
        "favorite": true,
      },
    },
  ],
]
`;

exports[`TreeContainer change handle should call injected prop onChange with the correct params when a node is updated 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 3,
              "name": "Leaf 3",
              "state": Object {
                "deletable": false,
                "favorite": false,
              },
            },
            Object {
              "id": 4,
              "name": "Leaf 4",
            },
          ],
          "id": 2,
          "name": "Leaf 2",
          "state": Object {
            "deletable": true,
            "expanded": true,
          },
        },
        Object {
          "id": 5,
          "name": "Leaf 5",
        },
      ],
      "id": 0,
      "name": "Leaf 1",
      "state": Object {
        "expanded": true,
      },
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 7,
              "name": "Leaf 8",
            },
            Object {
              "id": 8,
              "name": "Leaf 9",
            },
          ],
          "id": 6,
          "name": "Leaf 7",
          "state": Object {
            "expanded": false,
          },
        },
        Object {
          "id": 9,
          "name": "Leaf 10",
        },
      ],
      "id": 1,
      "name": "Leaf 6",
      "state": Object {
        "deletable": true,
        "expanded": false,
      },
    },
    Object {
      "id": "z",
      "name": "Leaf z",
      "state": Object {
        "deletable": true,
        "favorite": true,
      },
    },
  ],
]
`;

exports[`TreeContainer change handle should call injected prop onChange with the correct params when a node is updated when nodes come from context 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 3,
              "name": "Leaf 3",
              "state": Object {
                "deletable": false,
                "favorite": false,
              },
            },
            Object {
              "id": 4,
              "name": "Leaf 4",
            },
          ],
          "id": 2,
          "name": "Leaf 2",
          "state": Object {
            "deletable": true,
            "expanded": true,
          },
        },
        Object {
          "id": 5,
          "name": "Leaf 5",
        },
      ],
      "id": 0,
      "name": "Leaf 1",
      "state": Object {
        "expanded": true,
      },
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 7,
              "name": "Leaf 8",
            },
            Object {
              "id": 8,
              "name": "Leaf 9",
            },
          ],
          "id": 6,
          "name": "Leaf 7",
          "state": Object {
            "expanded": false,
          },
        },
        Object {
          "id": 9,
          "name": "Leaf 10",
        },
      ],
      "id": 1,
      "name": "Leaf 6",
      "state": Object {
        "deletable": true,
        "expanded": false,
      },
    },
    Object {
      "id": "z",
      "name": "Leaf z",
      "state": Object {
        "deletable": true,
        "favorite": true,
      },
    },
  ],
]
`;

exports[`TreeContainer extensions updateTypeHandlers should call injected prop onChange with the correct params for custom handlers 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "id": 3,
              "name": "Leaf 3",
              "state": Object {
                "deletable": true,
                "expanded": true,
                "favorite": true,
              },
            },
            Object {
              "children": Array [],
              "id": 4,
              "name": "Leaf 4",
              "state": Object {
                "expanded": true,
              },
            },
          ],
          "id": 2,
          "name": "Leaf 2",
          "state": Object {
            "deletable": true,
            "expanded": true,
          },
        },
        Object {
          "children": Array [],
          "id": 5,
          "name": "Leaf 5",
          "state": Object {
            "expanded": true,
          },
        },
      ],
      "id": 0,
      "name": "Leaf 1",
      "state": Object {
        "expanded": true,
      },
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "id": 7,
              "name": "Leaf 8",
              "state": Object {
                "expanded": true,
              },
            },
            Object {
              "children": Array [],
              "id": 8,
              "name": "Leaf 9",
              "state": Object {
                "expanded": true,
              },
            },
          ],
          "id": 6,
          "name": "Leaf 7",
          "state": Object {
            "expanded": true,
          },
        },
        Object {
          "children": Array [],
          "id": 9,
          "name": "Leaf 10",
          "state": Object {
            "expanded": true,
          },
        },
      ],
      "id": 1,
      "name": "Leaf 6",
      "state": Object {
        "deletable": true,
        "expanded": true,
      },
    },
    Object {
      "children": Array [],
      "id": "z",
      "name": "Leaf z",
      "state": Object {
        "deletable": true,
        "expanded": true,
        "favorite": true,
      },
    },
  ],
]
`;

exports[`TreeContainer extensions updateTypeHandlers should call injected prop onChange with the correct params for handler overrides 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 3,
              "name": "Leaf 3",
              "state": Object {
                "deletable": true,
                "favorite": true,
              },
              "updated": true,
            },
            Object {
              "id": 4,
              "name": "Leaf 4",
            },
          ],
          "id": 2,
          "name": "Leaf 2",
          "state": Object {
            "deletable": true,
            "expanded": true,
          },
        },
        Object {
          "id": 5,
          "name": "Leaf 5",
        },
      ],
      "id": 0,
      "name": "Leaf 1",
      "state": Object {
        "expanded": true,
      },
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 7,
              "name": "Leaf 8",
            },
            Object {
              "id": 8,
              "name": "Leaf 9",
            },
          ],
          "id": 6,
          "name": "Leaf 7",
          "state": Object {
            "expanded": false,
          },
        },
        Object {
          "id": 9,
          "name": "Leaf 10",
        },
      ],
      "id": 1,
      "name": "Leaf 6",
      "state": Object {
        "deletable": true,
        "expanded": false,
      },
    },
    Object {
      "id": "z",
      "name": "Leaf z",
      "state": Object {
        "deletable": true,
        "favorite": true,
      },
    },
  ],
]
`;

exports[`TreeContainer should render a Tree with the correct props 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "id": 3,
            "name": "Leaf 3",
            "state": Object {
              "deletable": true,
              "favorite": true,
            },
          },
          Object {
            "id": 4,
            "name": "Leaf 4",
          },
        ],
        "id": 2,
        "name": "Leaf 2",
        "state": Object {
          "deletable": true,
          "expanded": true,
        },
      },
      Object {
        "id": 5,
        "name": "Leaf 5",
      },
    ],
    "deepness": 0,
    "id": 0,
    "name": "Leaf 1",
    "parents": Array [],
    "state": Object {
      "expanded": true,
    },
  },
  Object {
    "children": Array [
      Object {
        "id": 3,
        "name": "Leaf 3",
        "state": Object {
          "deletable": true,
          "favorite": true,
        },
      },
      Object {
        "id": 4,
        "name": "Leaf 4",
      },
    ],
    "deepness": 1,
    "id": 2,
    "name": "Leaf 2",
    "parents": Array [
      0,
    ],
    "state": Object {
      "deletable": true,
      "expanded": true,
    },
  },
  Object {
    "deepness": 2,
    "id": 3,
    "name": "Leaf 3",
    "parents": Array [
      0,
      2,
    ],
    "state": Object {
      "deletable": true,
      "favorite": true,
    },
  },
  Object {
    "deepness": 2,
    "id": 4,
    "name": "Leaf 4",
    "parents": Array [
      0,
      2,
    ],
  },
  Object {
    "deepness": 1,
    "id": 5,
    "name": "Leaf 5",
    "parents": Array [
      0,
    ],
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "id": 7,
            "name": "Leaf 8",
          },
          Object {
            "id": 8,
            "name": "Leaf 9",
          },
        ],
        "id": 6,
        "name": "Leaf 7",
        "state": Object {
          "expanded": false,
        },
      },
      Object {
        "id": 9,
        "name": "Leaf 10",
      },
    ],
    "deepness": 0,
    "id": 1,
    "name": "Leaf 6",
    "parents": Array [],
    "state": Object {
      "deletable": true,
      "expanded": false,
    },
  },
  Object {
    "deepness": 0,
    "id": "z",
    "name": "Leaf z",
    "parents": Array [],
    "state": Object {
      "deletable": true,
      "favorite": true,
    },
  },
]
`;
